# RedInkMore

./: .gitignore  Gemini.md  Skills.md  brand_styles.yaml  dev.sh  generate_logo.py  pyproject.toml
backend/generators/: base.py  google_genai.py  image_api.py  openai_compatible.py
backend/prompts/: outline_rewrite_prompt.txt  style_analysis_visual.txt  style_analysis_writing.txt
backend/routes/: __init__.py  brand_routes.py  config_routes.py  history_routes.py  image_routes.py  outline_routes.py
backend/services/: brand.py  content_parser.py  history.py  image.py  outline.py  style_extractor.py
backend/utils/: text_client.py
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/api/: brand.ts  index.ts
frontend/src/assets/css/: base.css
frontend/src/components/history/: GalleryCard.vue  ImageGalleryModal.vue
frontend/src/components/home/: ComposerInput.vue
frontend/src/components/image/: ImageEditor.vue
frontend/src/components/preview/: XhsPreview.vue
frontend/src/components/result/: ContentDisplay.vue
frontend/src/router/: index.ts
frontend/src/stores/: brand.ts  generator.ts
frontend/src/views/: BrandStyleView.vue  GenerateView.vue  HistoryView.vue  HomeView.vue  OutlineView.vue  ResultView.vue
